--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -75,7 +75,7 @@
 </div>
 
 <!-- Toasts para mensajes -->
-<div id="errorToast" class="fixed bottom-4 right-4 hidden">
+<div id="errorToast" class="fixed bottom-4 right-4 hidden z-50">
     <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative text-sm" role="alert">
         <span class="block sm:inline pr-8" id="errorMessage"></span>
         <button class="absolute top-1/2 right-3 transform -translate-y-1/2" onclick="hideToast('errorToast')" type="button" aria-label="Cerrar mensaje">
